# aifactory

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  auth.ts  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  health-audit-2026-03-18.md  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  start_backend.py  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agent/: canvas_graph.py  graph.py  prompt_knowledge.py  prompts.py  state.py
backend/app/models/: dtos.py
backend/app/routes/: canvas_sessions.py  health.py  messages.py  sessions.py
backend/app/services/: assistant_service.py  canvas_assistant_service.py  image_repository.py  model_service.py  session_repository.py
backend/tests/: test_canvas_agent.py  test_canvas_assistant_service.py  test_canvas_sessions.py  test_knowledge_integration.py
backend/tests/acceptance/: test_slice_01_python_projekt_setup.py  test_slice_02_fastapi_server_health.py  test_slice_03_langgraph_agent.py  test_slice_04_sse_streaming_endpoint.py  test_slice_08_assistant_backend_tools.py  test_slice_12_prompt_tools_backend.py  test_slice_13a_session_repository_backend.py  test_slice_13c_session_resume_switcher.py  test_slice_16_analyze_image_tool.py  test_slice_18_bildanalyse_db_caching.py  test_slice_20_recommend_model_tools.py  test_slice_22_langsmith_tracing_error.py
backend/tests/unit/: test_agent_state.py  (+18 more)
(+1488 files in other folders)
